--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </head>
 <body>
 	<!-- Top hero covers whole viewport; bottom section is visible on scroll -->
-	<section class="hero" aria-hidden="false">
+	<!-- <section class="hero" aria-hidden="false">
 		<pre class="terminal" aria-hidden="false">
 Welcome to SWI-Prolog (threaded, 64 bits, version 9.2.9)
 SWI-Prolog comes with ABSOLUTELY NO WARRANTY. This is free software.
@@ -114,7 +114,7 @@ For built-in help, use ?- help(Topic). or ?- apropos(Word).
 
 ?- 
 		</pre>
-	</section>
+	</section> -->
 
 	<section class="panel" id="programsPanel" aria-label="Prolog Programs">
 		<div class="controls">
