--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@ For built-in help, use ?- help(Topic). or ?- apropos(Word).
 			const builtInPrograms = [
 				{
 					name: 'family_tree.pl',
-					text: `% --- Facts based on your input ---
+					text: `#file:family_tree.pl
+% --- Facts based on your input ---
 
 % Gender definitions
 male(aajoba).
@@ -227,7 +228,8 @@ descendant(X, Y) :- ancestor(Y, X).`
 				},
 				{
 					name: 'hanoi.pl',
-					text: `hanoi(1, Source, Target, _):-
+					text: `#file:hanoi.pl
+hanoi(1, Source, Target, _):-
     write('Move disk 1 from '), write(Source), write(' to '), write(Target), nl.
 
 hanoi(N, Source, Target, Auxiliary):-
@@ -239,7 +241,8 @@ hanoi(N, Source, Target, Auxiliary):-
 				},
 				{
 					name: 'puzzle.pl',
-					text: `% ==========================================
+					text: `#file:puzzle.pl
+% ==========================================
 % 8-Puzzle with Depth Limit (Prevents Loops)
 % ==========================================
 
@@ -311,7 +314,8 @@ print_state([A,B,C,D,E,F,G,H,I]) :-
 				},
 				{
 					name: 'tic.pl',
-					text: `% Program: Tic-Tac-Toe (tic.pl)
+					text: `#file:tic.pl
+% Program: Tic-Tac-Toe (tic.pl)
 
 % --- 1. Start Game ---
 play :-
@@ -402,19 +406,20 @@ win(P, [_,_,P,_,P,_,P,_,_]).`
 				},
 				{
 					name: 'water.pl',
-					text: `% Represent state as state(Jug5, Jug3)
+					text: `#file:water.pl
+% Represent state as state(Jug5, Jug3)
 goal(state(4,_)).     % Goal: 4 liters in 5L jug
 % Valid moves
-move(state(X,Y), state(5,Y)) :- X < 5.      
-move(state(X,Y), state(X,3)) :- Y < 3.        
-move(state(X,Y), state(0,Y)) :- X > 0.        
-move(state(X,Y), state(X,0)) :- Y > 0.       
-move(state(X,Y), state(X1,Y1)) :-            
+move(state(X,Y), state(5,Y)) :- X < 5.
+move(state(X,Y), state(X,3)) :- Y < 3.
+move(state(X,Y), state(0,Y)) :- X > 0.
+move(state(X,Y), state(X,0)) :- Y > 0.
+move(state(X,Y), state(X1,Y1)) :-
     X > 0, Y < 3,
     Transfer is min(X, 3-Y),
     X1 is X - Transfer,
     Y1 is Y + Transfer.
-move(state(X,Y), state(X1,Y1)) :-            
+move(state(X,Y), state(X1,Y1)) :-
     Y > 0, X < 5,
     Transfer is min(Y, 5-X),
     Y1 is Y - Transfer,
@@ -433,7 +438,8 @@ dfs(State, Visited) :-
 				},
 				{
 					name: 'arith1.pl',
-					text: `% Check if a number is prime
+					text: `#file:arith1.pl
+% Check if a number is prime
 is_prime(2) :- !.
 is_prime(N) :-
     N > 2,
@@ -449,8 +455,24 @@ primes_up_to(N, Primes) :-
     findall(X, (between(2, N, X), is_prime(X)), Primes).`
 				},
 				{
+					name: 'arith2.pl',
+					text: `#file:arith2.pl
+% Calculate GCD using Euclidean algorithm
+gcd(A, 0, A) :- !.
+gcd(A, B, G) :-
+    B > 0,
+    R is A mod B,
+    gcd(B, R, G).
+
+% Calculate LCM
+lcm(A, B, L) :-
+    gcd(A, B, G),
+    L is (A * B) // G.`
+				},
+				{
 					name: 'arith3.pl',
-					text: `% Program: Count to 10
+					text: `#file:arith3.pl
+% Program: Count to 10
 
 % Base case: When the number is 10, print it and stop.
 count_to_10(10) :- 
@@ -461,6 +483,121 @@ count_to_10(X) :-
     write(X), nl,
     Y is X + 1,
     count_to_10(Y).`
+				},
+				{
+					name: 'arith4.pl',
+					text: `#file:arith4.pl
+% Calculator predicate
+calc(Operator, X, Y, Result) :-
+    Operator = '+', Result is X + Y;
+    Operator = '-', Result is X - Y;
+    Operator = '*', Result is X * Y;
+    Operator = '/', Y \\= 0, Result is X / Y;
+    Operator = 'mod', Result is X mod Y.`
+				},
+				{
+					name: 'arith5.pl',
+					text: `#file:arith5.pl
+% Fibonacci number
+fibonacci(0, 0) :- !.
+fibonacci(1, 1) :- !.
+fibonacci(N, F) :-
+    N > 1,
+    N1 is N - 1,
+    N2 is N - 2,
+    fibonacci(N1, F1),
+    fibonacci(N2, F2),
+    F is F1 + F2.
+
+% Print first N fibonacci numbers
+print_fibonacci(0) :- !.
+print_fibonacci(N) :-
+    N > 0,
+    N1 is N - 1,
+    print_fibonacci(N1),
+    fibonacci(N1, F),
+    write(F), write(' '), nl.`
+				},
+				{
+					name: 'program1.pl',
+					text: `#file:program1.pl
+cat(tom).
+loves_to_eat(kunal,pasta).
+of_color(hair,black).
+loves_to_play_games(nawaz).
+lazy(pratyusha).
+like(ram,mango).
+girl(seema).
+red(rose).
+likes(bill,gold).
+owns(john,gold).`
+				},
+				{
+					name: 'program2.pl',
+					text: `#file:program2.pl
+symptom(chicken_pox,high_fever).
+symptom(chicken_pox,chills).
+symptom(flu,chills).
+symptom(cold,mild_body_ache).
+symptom(flu,severe_body_ache).
+symptom(cold,runny_nose).
+symptom(flu,runny_nose).
+symptom(flu,moderate_cough).
+girl(priya).
+girl(tiyasha).
+girl(jaya).
+can_cook(priya).
+can_cook(jaya).
+can_cook(tiyasha).
+likes(priya, jaya) :- can_cook(jaya).
+likes(priya, tiyasha) :- can_cook(tiyasha).`
+				},
+				{
+					name: 'program3.pl',
+					text: `#file:program3.pl
+sing_a_song(ananya).
+listens_to_music(rohit).
+listens_to_music(ananya):-sing_a_song(ananya).
+happy(ananya):-sing_a_song(ananya).
+happy(rohit):-listens_to_music(rohit).
+playes_guitar(rohit):-listens_to_music(rohit).
+dog(rottweiler).
+cat(sphynx).
+dog(poodle).
+dog(bulldog).
+cat(bengali).
+dog(dobernmann).
+cat(himalayan).
+cat(singapura).`
+				},
+				{
+					name: 'program4.pl',
+					text: `#file:program4.pl
+in(room,banana).
+at(ceiling,banana).
+strong(monkey).
+grasp(monkey).
+climb(monkey,chair).
+push(monkey,chair):- 
+strong(monkey).
+under(banana,chair):- 
+push(monkey,chair). 
+canreach(banana,monkey):- 
+at(floor,banana);
+at(ceiling,banana),  
+under(banana,chair),  
+climb(monkey,chair). 
+canget(banana,monkey):-
+canreach(banana,monkey),grasp(monkey).`
+				},
+				{
+					name: 'program5.pl',
+					text: `#file:program5.pl
+factorial(0, 1) :- !.
+ factorial(N, F) :- N > 0,
+                    N1 is N - 1,
+                    factorial(N1, F1),
+                    F is N * F1.`
 				},
 			];
 
